force-app/main/default/objects/leankor__TaskTemplate__c/leankor__TaskTemplate__c.object-meta.xml
<CustomObject>
    <description>This is task template which contain records from automation Template</description>
    <label>Task Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskTemplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>