force-app/main/default/objects/leankor__TaskTemplate__c/fields/leankor__ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ActivityDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>