force-app/main/default/objects/leankor__TaskTemplate__c/fields/leankor__Description__c.field-meta.xml
<CustomField>
    <fullName>leankor__Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>