force-app/main/default/objects/leankor__TaskTemplate__c/fields/leankor__GUID__c.field-meta.xml
<CustomField>
    <fullName>leankor__GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>